Add functional tests for permission assigment to roles
Took 1 hour 35 minutes
