# design/authservice_openapi.yaml
@@ -471,16 +471,14 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/AssignPermission'
-      description: Assign Permission to the Role, returns array of role Permissions.
+      description: Assign Permission to the Role, returns assigned Permission.
       responses:
         '201':
           description: OK
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Permission'
+                $ref: '#/components/schemas/Permission'
         '401':
           $ref: '#/components/responses/Unauthorized'
         '400':
@@ -507,7 +505,7 @@ paths:
       summary: Remove Permission from Role by uuid.
       tags:
         - Roles
-      description: Delete Permission from Role by uuid, returns deleted Role.
+      description: Delete Permission from Role by uuid, returns deleted Permission.
       responses:
         '200':
           description: OK
